--- a/package.json
+++ b/package.json
@@ -2,6 +2,22 @@
   "name": "portfolio-22r01a0561",
   "version": "1.0.0",
   "private": true,
+  "description": "https://22r01a0561.github.io/sairishikreddy.io/",
+  "homepage": "https://github.com/22r01a0561/sairishikreddy.io",
+  "bugs": {
+    "url": "https://github.com/22r01a0561/sairishikreddy.io/issues"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/22r01a0561/sairishikreddy.io.git"
+  },
+  "license": "ISC",
+  "author": "",
+  "type": "commonjs",
+  "main": "next.config.js",
+  "directories": {
+    "lib": "lib"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "cross-env NODE_ENV=production next build",
@@ -13,42 +29,55 @@
     "type-check": "tsc"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.26.9",
     "@fortawesome/fontawesome-svg-core": "^6.3.0",
     "@fortawesome/free-brands-svg-icons": "^6.3.0",
     "@fortawesome/free-solid-svg-icons": "^6.3.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@radix-ui/react-scroll-area": "^1.2.2",
-    "@react-buddy/ide-toolbox-next": "^2.4.1",
     "@react-three/drei": "^9.108.4",
     "@react-three/fiber": "^8.16.8",
     "@react-three/rapier": "^1.4.0",
     "@tailwindcss/line-clamp": "^0.4.2",
+    "@tailwindcss/postcss": "^4.0.14",
+    "appdir": "^1.0.1",
+    "axios": "^1.8.4",
+    "browserslist": "^4.24.4",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
+    "export": "^0.1.337",
+    "express": "^4.21.2",
     "framer-motion": "^10.6.1",
     "gsap": "^3.11.5",
     "kinet": "^2.2.1",
     "leva": "^0.9.35",
     "lodash": "^4.17.21",
     "meshline": "^3.3.1",
-    "next": "^13.4.12",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-icons": "^4.10.1",
+    "metadata": "^0.1.0",
+    "next": "^15.2.3",
+    "node": "^20.19.0",
+    "puppeteer": "^24.4.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-icons": "^4.12.0",
     "react-intersection-observer": "^9.4.3",
     "resize-observer-polyfill": "^1.5.1",
     "scroller-motion": "^1.2.3",
     "sharp": "^0.32.0",
     "tailwind-merge": "^2.6.0",
+    "tailwind-scrollbar": "^3.1.0",
     "three": "^0.166.1",
     "touch-cli": "^0.0.1",
-    "usehooks-ts": "^2.9.1"
+    "usehooks-ts": "^2.16.0",
+    "viewport": "^2.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.5",
     "@types/react": "18.0.28",
     "@typescript-eslint/eslint-plugin": "^6.2.0",
     "@typescript-eslint/parser": "^6.2.0",
-    "autoprefixer": "^10.4.13",
+    "autoprefixer": "^10.4.21",
     "bun-devtools": "^0.0.2",
     "bun-types": "^0.7.0",
     "eslint": "^8.45.0",
@@ -60,15 +89,15 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-unicorn": "^48.0.1",
     "lint-staged": "^13.0.3",
-    "postcss": "^8.4.21",
+    "postcss": "^8.5.3",
     "prettier": "^2.8.4",
     "prettier-plugin-tailwindcss": "^0.2.5",
     "stylelint": "^14.9.1",
     "stylelint-config-prettier": "^9.0.3",
     "stylelint-config-recess-order": "^3.0.0",
     "stylelint-config-standard": "^26.0.0",
-    "tailwind-scrollbar": "^3.0.0",
-    "tailwindcss": "^3.2.7",
+    "tailwindcss": "^3.4.1",
     "typescript": "5.1.6"
-  }
+  },
+  "keywords": []
 }
