feat: add fast-average-color package and enhance UI components
- Added `fast-average-color` package to calculate average colors for images.
- Updated `CertificationCard` and `ProjectCard` components to dynamically adjust text color based on image brightness.
- Improved global styles in `globals.css` for better responsiveness and readability.
- Removed unused `CodingProfiles` component and related imports.
- Enhanced `NavBar` for better mobile responsiveness and accessibility.
- Updated various sections for improved layout and design consistency.

--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "dotenv": "^16.4.7",
     "export": "^0.1.337",
     "express": "^4.21.2",
+    "fast-average-color": "^9.5.0",
     "framer-motion": "^10.6.1",
     "gsap": "^3.11.5",
     "kinet": "^2.2.1",
